        (including lists) now often make changes in place, rather than
        allocating a new vector.  A small amount of additional
        memory is sometimes allocated at the end of a vector to allow
        expansion without reallocation.  This improvement mirrors a
        recent improvement in R-3.4.0, but applies in more situations.
  \item Subsetting an unclassed object now does not cause a copy of
        the object to be made.  For example, the following do not
        require copying \code{obj}:
\preformatted{    x <- unclass(obj)[-1]; y <- unclass(obj)[[1]]
}
        \code{help(unclass)} now documents what operations on 
        \code{unclass(obj)} do not require copying.  Note that with
        this improvement, there is now no reason to use \code{.subset}
        or \code{.subset2}.
  \item The \code{paste} and \code{paste0} functions have been sped up.
        They are now about two to six times
        faster than in R-3.4.0, and are usually faster than the 
        \code{stri_paste} function from the \code{stringi} package.
        Substring extraction and replacement with \code{substr} or
        \code{substring} has also been sped up for long strings.
  \item Relational operators are now faster, and may sometimes be done in 
        helper threads (though currently without pipelining of data).
        Computations such as \code{sum(vec>0)} are now done with a
        merged procedure that avoids creating \code{vec>0} as an intermediate
        value.
  \item The \code{rep} function is now often faster for string vectors,
        and for vectors of any type that have names.
  \item Improved methods for symbol lookup are now used, which increase
        speed in many contexts, and especially in functions that are
        defined in packages (rather than in the global workspace).
  \item The speed of \code{.Call} has been improved.
  \item New versions of the C matrix multiply functions are now used,