@@ -1,2 +1,5 @@
 Sometimes avoid allocation in 'c' by expanding space used by 
-first argument.
+first argument. 
+
+Also shows reallocs in Rprofmemt output.
+
